changes: to show error in actions